<resources>
    <string name="app_name">Simple Weather</string>
    <string name="weather_app">Weather App</string>
    <string name="zip_code">Zip code:</string>
    <string name="search">Search</string>
    <string name="weather">Weather</string>
    <string name="group_project">Group Project</string>
    <string name="team_jackson_lily_aaron_parth_and_priyesh">Team Jackson, Lily, Aaron, Parth, and Priyesh</string>
    <string name="firebase_database">Firebase Database</string>
    <string name="loading">Loading</string>
    <string name="acc_weather_icon">Weather icon</string>
    <string name="daily">Daily</string>
    <string name="current">Current</string>
    <string name="hourly">Hourly</string>
</resources>