<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="12dp"
        android:text="@string/weather_app"
        android:textColor="@color/black" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/zip_code_flow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:constraint_referenced_ids="zip_code_tv,zip_code_edit_text"
        app:flow_horizontalGap="12dp"
        app:flow_horizontalStyle="packed" />

    <TextView
        android:id="@+id/zip_code_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip_code"
        android:labelFor="@id/zip_code_edit_text"
        android:textSize="12sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_margin="12dp"/>

    <EditText
        android:id="@+id/zip_code_edit_text"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textSize="12sp"
        android:maxLength="5"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/zip_code_tv"
        app:layout_constraintBottom_toBottomOf="@id/zip_code_tv"
        app:layout_constraintStart_toEndOf="@id/zip_code_tv"/>

    <Button
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/zip_code_flow" />

    <TextView
        android:id="@+id/location_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/search_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Schenectady, NY"/>

    <TextView
        android:id="@+id/forecast_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/location_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="High: 50 F, Low: 30 F"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>